--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon run src/app.js"
+    "start": "env-cmd -f ./config/prod.env node src/app.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon run src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "nodemon": "^3.0.2"
   }
 }
