--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "env-cmd -f ./config/prod.env node src/app.js",
+    "start": "node src/app.js",
     "dev": "env-cmd -f ./config/dev.env nodemon run src/app.js"
   },
   "keywords": [],
