--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon run src/app.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon run src/app.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2"
   }
 }
